2008-12-28  Donal K. Fellows  <dkf@users.sf.net>

	TIP #171 IMPLEMENTATION

	* win/tkWinX.c (GenerateXEvent): Redirect <MouseWheel> to the window
	that contains the mouse.
	* generic/tkEvent.c (InvokeFocusHandlers): Do not direct <MouseWheel>
	through the focus mechanism.

	* generic/tkImgPNG.c (ReadIDAT): Corrected code to transfer blocks of
	compressed data into the Tcl_ZlibStream. Allows the reading of all
	images from PngSuite set. Thanks to Michael Kirkham for fix/testing.

	TIP #244 IMPLEMENTATION

	* generic/tkImgPNG.c, tests/imgPNG.test, doc/photo.n: Adaptation of
	tkpng to the Tk core, proving support for PNG image reading and
	writing, based on Tcl's zlib support.

2008-12-27  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTreeview.c: Fix inconsistent use of treeArea /
	headingArea; fixes [Bug 2381555]. ([$tv identify] didn't work when
	horizontally scrolled).

2008-12-21  Donal K. Fellows  <dkf@users.sf.net>

	* doc/canvas.n (postscript): Regularized documentation of -channel
	option.

2008-12-19  Don Porter	<dgp@users.sourceforge.net>

	*** 8.6b1 TAGGED FOR RELEASE ***

	* changes:	Updates for 8.6b1 release.

	* tests/clrpick.test:	Eliminate duplicate test names.
	* tests/embed.test:
	* tests/text.test:
	* tests/textMark.test:

	* README:		Bump version number to 8.6b1
	* generic/tk.h:
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

2008-12-18  Don Porter	<dgp@users.sourceforge.net>

	* library/msgs/de.msg:	Updated German messages. Thanks to Ruediger
	Haertel. [Patch 2442309].

2008-12-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk.h:		VOID --> void
	* unix/tkUnixPort.h:
	* macosx/tkMacOSXPort.h:

2008-12-17  Donal K. Fellows  <dkf@users.sf.net>

	* doc/selection.n: Assorted small fixes. [Bugs 2441817,2441884]

2008-12-16  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinDialog.c: Remove unused variables
